--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cookie-session": "^2.0.0-beta.3",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
+    "cookie-session": "^2.0.0-beta.3",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "jquery": "^3.3.1",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.2",
     "passport": "^0.4.0",
